<resources>
    <string name="app_name">Easy Digital Business Flyer</string>

    <string name="yelp_phone_hint">Example: (415) 788-9023</string>
    <string name="yelp_url_hint">Example:  www.yelp.com/biz/mahalo-bowl</string>
    <string name="header_text_1">Make a shareable image with your Yelp business information! To get started, enter either your business phone number or your Yelp URL below. Here\'s a sample of what you\'ll create:</string>
    <string name="phone">Phone</string>
    <string name="yelp_url">url</string>
    <string name="input">Enter Business Phone # or Yelp URL:</string>
    <string name="go">--></string>

    <string name="call_for_time">Call For Hours</string>
    <string name="weekday">Mon - Fri: </string>
    <string name="sat_closed">Sat: Closed</string>
    <string name="sun_closed">Sun: Closed</string>
    <string name="sat_open">Sat: </string>
    <string name="sun_open">Sun: </string>
    <string name="am">am</string>
    <string name="pm">pm</string>

    <string name="invalid_phone_number">Phone Number is not registered on yelp. Try Again</string>
    <string name="invalid_yelp_url">Invalid Yelp url. Try Again</string>
    <string name="yelp_access_token_error">Internal error. Please try again later</string>
    <string name="bad_input">Please enter a valid phone number or yelp url</string>
    <string name="default_error">default error</string>

    <string name="review">reviews</string>

    <string name="in_progress">In progress...</string>

    <string name="share_body">Here is the share content body</string>
    <string name="share_subject">Check out my Business Badge!</string>
    <string name="share_text">Made using Easy Digital Business Flyer</string>
    <string name="share_intent">Share your string using</string>
    <string name="share_permission_rationale">You need to allow access to Storage</string>
    <string name="share_permission_denied">Permission to storage denied</string>
</resources>
